Add sign out functionality
Also reworks the main navigation into partials and doesn't render
elements like search fields and menu items for unauthenticated users.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,7 +14,7 @@
   %body
     #wrapper.big-wrapper
 
-    = render partial: 'shared/main_navigation'
+    = render partial: 'navigation/main'
 
     - flash.each do |name, msg|
       - if flash[name]
