Move patient header flush left

--- a/app/views/exit_site_infections/edit.html.haml
+++ b/app/views/exit_site_infections/edit.html.haml
@@ -1,8 +1,6 @@
-.main-content
-  .row.g-center
+.wide-screen
+  .columns.large-12
     = render partial: "patients/patient_info_header", locals: { model: @patient }
-
-  .row
     = render partial: "patients/mini_renal_profile", locals: { model: @patient }
 
 .row
