--- a/app/views/modalities/index.html.haml
+++ b/app/views/modalities/index.html.haml
@@ -1,9 +1,8 @@
-.row.g-center
-  = render partial: 'patients/patient_info_header', locals: { model: @patient }
-
-.row
-  = render partial: 'patients/mini_renal_profile', locals: { model: @patient }
-
+.wide-screen
+  .columns.large-12
+    = render partial: "patients/patient_info_header", locals: { model: @patient }
+    = render partial: "patients/mini_renal_profile", locals: { model: @patient }
+    
 .row
   %h5
     Patient Modality
@@ -34,8 +33,3 @@
   = link_to 'Set New Modality', new_patient_modality_path(@patient),
       title: 'Set Patient Modality',
       class: 'button tiny left cancel mt'
-
-.wide-screen
-  = content_for :secondary_nav do
-    = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
-
