--- a/app/views/modalities/new.html.haml
+++ b/app/views/modalities/new.html.haml
@@ -1,8 +1,7 @@
-.row.g-center
-  = render partial: "patients/patient_info_header", locals: { model: @patient }
-
-.row
-  = render partial: "patients/mini_renal_profile", locals: { model: @patient }
+.wide-screen
+  .columns.large-12
+    = render partial: "patients/patient_info_header", locals: { model: @patient }
+    = render partial: "patients/mini_renal_profile", locals: { model: @patient }
 
 .row
   %h5
@@ -43,8 +42,3 @@
         = m.submit "Save Modality", :class => "button tiny right save mt"
 
   = link_to "Cancel", clinical_summary_patient_path(@patient), class: "button tiny left cancel mt"
-
-.wide-screen
-  = content_for :secondary_nav do
-    = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
-
