--- a/app/views/peritonitis_episodes/show.html.haml
+++ b/app/views/peritonitis_episodes/show.html.haml
@@ -2,10 +2,8 @@
   .columns.large-12
     = render partial: "patients/patient_info_header", locals: { model: @patient }
     = render partial: "patients/mini_renal_profile", locals: { model: @patient }
-
-.row
-  %h5
-    = "Peritonitis Episode Details - Diagnosed: #{@peritonitis_episode.diagnosis_date}"
+    %h5
+      = "Peritonitis Episode Details - Diagnosed: #{@peritonitis_episode.diagnosis_date.strftime("%d/%m/%Y")}"
 
 .row
   .large-12.columns
@@ -80,7 +78,7 @@
                 %li
                   = "Abdominal Pain: #{yes_no(@peritonitis_episode.abdominal_pain)}"
                 %li
-                  = "Fluid Description: #{@peritonitis_episode.fluid_description.description}"
+                  = "Fluid Description: #{@peritonitis_episode.fluid_description}"
         .row
           .large-12.columns
             .section-underliner.title-bold
