Standardise screen h5 header styling

--- a/app/views/modality_reasons/index.html.haml
+++ b/app/views/modality_reasons/index.html.haml
@@ -1,4 +1,5 @@
-.row
+.wide-screen
+  .columns.large-12
   %h5
     Renal Registry Reason for Change Codes
 
@@ -39,14 +40,3 @@
             = mr.rr_code
           %td{ :data => { :heading => "PD to Haemodialysis" } }
             = mr.description
-            
-
-
-
-
-
-            
-
-
-
-
