--- a/app/views/patients/esrf_info.html.haml
+++ b/app/views/patients/esrf_info.html.haml
@@ -3,9 +3,7 @@
     = render partial: "patients/patient_info_header", locals: { model: @patient }
     = render partial: "patients/mini_renal_profile", locals: { model: @patient }
 
-.row
-  %h5
-    ESRF Summary 
+    %h5 ESRF Summary 
 
 .row
   %ul.no-bullet
