--- a/app/views/modalities/index.html.haml
+++ b/app/views/modalities/index.html.haml
@@ -3,9 +3,7 @@
     = render partial: "patients/patient_info_header", locals: { model: @patient }
     = render partial: "patients/mini_renal_profile", locals: { model: @patient }
     
-.row
-  %h5
-    Patient Modality
+    %h5 Patient Modality History
 
   %table
     %tr
