--- a/app/views/exit_site_infections/show.html.haml
+++ b/app/views/exit_site_infections/show.html.haml
@@ -3,9 +3,8 @@
     = render partial: "patients/patient_info_header", locals: { model: @patient }
     = render partial: "patients/mini_renal_profile", locals: { model: @patient }
 
-.row
-  %h5
-    = "Exit Site Infection Details - Diagnosed: #{@exit_site_infection.diagnosis_date}"
+    %h5
+      = "Exit Site Infection Details - Diagnosed: #{@exit_site_infection.diagnosis_date.strftime("%d/%m/%Y")}"
 
 .row
   .large-12.columns
@@ -53,14 +52,4 @@
       .large-12.columns.button-padding
         = link_to "Edit", edit_patient_exit_site_infection_path(@patient, @exit_site_infection.id), class: "tiny button right"
 
-<<<<<<< HEAD
-        = link_to "Return to PD info", pd_info_patient_path(@patient), class: "button tiny left cancel"
-
-
-.wide-screen
-  = content_for :secondary_nav do
-    = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
-
-=======
         = link_to "Back", pd_info_patient_path(@patient), class: "button tiny left cancel"
->>>>>>> Further removal of fixed secondary_nav partial
