--- a/app/views/patients/pd_info.html.haml
+++ b/app/views/patients/pd_info.html.haml
@@ -3,24 +3,18 @@
     = render partial: "patients/patient_info_header", locals: { model: @patient }
     = render partial: "patients/mini_renal_profile", locals: { model: @patient }
 
-.row  
-  %h5.g-center
-    = link_to "PD Info", pd_info_patient_path(@patient)
-
+    %h5 PD Info
+    %p  
+      = link_to "Add Peritonitis Episode", new_patient_peritonitis_episode_path(@patient), :class => "button tiny" 
+      = link_to "Add Exit Site Infection", new_patient_exit_site_infection_path(@patient), :class => "button tiny"
 .wide-screen
-  %h5
-    = "Peritonitis Episode (#{@peritonitis_episodes.length})"
-
   %h6
-    = link_to "Record an Episode of Peritonitis", new_patient_peritonitis_episode_path(@patient)
+    = "Peritonitis Episodes (#{@peritonitis_episodes.length})"
                                 
   = render partial: "patients/peritonitis_table"
 
-  %h5
-    = "Exit Site Infections (#{@exit_site_infections.length})"
-
   %h6
-    = link_to "Record an Exit Site Infection", new_patient_exit_site_infection_path(@patient)
+    = "Exit Site Infections (#{@exit_site_infections.length})"
 
   = render partial: "patients/exit_site_table"
                                   
