--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,5 +1,5 @@
 .row
-  %h1 Users
+  %h3 Manage users
 
 .row
   = link_to 'All Users', action: 'index'
@@ -11,11 +11,11 @@
     %thead
       %th Email
       %th Approved
-      %th
+      %th{width: '8%'}
 
     %tbody
-    - @users.each do |user|
-      %tr
-        %td= user.email
-        %td= user.approved
-        %td= link_to "Edit"
+      - @users.each do |user|
+        %tr
+          %td= user.email
+          %td= user.approved
+          %td= link_to 'Edit', edit_admin_user_path(user), class: 'button tiny save'
