--- a/app/views/navigation/_main.html.haml
+++ b/app/views/navigation/_main.html.haml
@@ -4,10 +4,11 @@
       %h1
         = link_to "Renalwarev2", patients_path, :title => "Home"
 
-  - if current_user.present?
+  - if user_signed_in?
     %section.top-bar-section
       = render partial: 'navigation/patient_admin'
       = render partial: 'navigation/patient_search'
       = render partial: 'navigation/sign_out'
+      = render partial: 'navigation/users_admin'
       = render partial: 'navigation/renal_reg_codes_admin'
       = render partial: 'navigation/patients_admin'
