Further H5 header standardisation

--- a/app/views/patient_events/index.html.haml
+++ b/app/views/patient_events/index.html.haml
@@ -3,8 +3,7 @@
     = render partial: "patients/patient_info_header", locals: { model: @patient }
     = render partial: "patients/mini_renal_profile", locals: { model: @patient }
 
-.row.g-center
-  %h5= link_to "Patient Events", patient_patient_events_path(@patient)
+    %h5 Patient Events
 
   %table.responsive
     %thead
