--- a/app/views/peritonitis_episodes/show.html.haml
+++ b/app/views/peritonitis_episodes/show.html.haml
@@ -78,7 +78,7 @@
                 %li
                   = "Abdominal Pain: #{yes_no(@peritonitis_episode.abdominal_pain)}"
                 %li
-                  = "Fluid Description: #{@peritonitis_episode.fluid_description}"
+                  = "Fluid Description: #{@peritonitis_episode.fluid_description.description}"
         .row
           .large-12.columns
             .section-underliner.title-bold
