Restore fluid_description.description
Also cosmetic tweaks to PD Infection list display

--- a/app/views/patients/_peritonitis_table.html.haml
+++ b/app/views/patients/_peritonitis_table.html.haml
@@ -73,7 +73,7 @@
             %li
               = "Abdominal Pain: #{yes_no(p.abdominal_pain)}"
             %li
-              = "Fluid Description: #{p.fluid_description}"
+              = "Fluid Descr: #{p.fluid_description.description}"
 
         %td{ :data => { :heading => "Antibiotics/Routes" }, valign: "top" }
           %ul.table-data-list
