--- a/app/views/navigation/_users_admin.html.haml
+++ b/app/views/navigation/_users_admin.html.haml
@@ -1,4 +1,7 @@
 - if current_user.has_role?(:super_admin)
-  %ul.left
-    %li
+  %ul.right
+    %li.has-dropdown
       = link_to 'Manage users', admin_users_path, title: 'Manage users'
+      %ul.dropdown
+        %li
+          = link_to 'Approve users', admin_users_path(approved: false)
