Fix unapproved users functionality

--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -17,5 +17,5 @@
       - @users.each do |user|
         %tr
           %td= user.email
-          %td= user.approved
+          %td= user.approved?
           %td= link_to 'Edit', edit_admin_user_path(user), class: 'button tiny save'
