--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,30 +1,30 @@
 <div class="row">
-  <h2>Sign up</h2>
+  <h4>Register</h4>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
 
-    <div class="field">
+    <div class="field large-8 small-6">
       <%= f.label :first_name %><br />
       <%= f.text_field :first_name, autofocus: true %>
     </div>
 
-    <div class="field">
+    <div class="field large-8 small-6">
       <%= f.label :last_name %><br />
       <%= f.text_field :last_name %>
     </div>
 
-    <div class="field">
+    <div class="field large-8 small-6">
       <%= f.label :username %><br />
       <%= f.text_field :username %>
     </div>
 
-    <div class="field">
+    <div class="field large-8 small-6">
       <%= f.label :email %><br />
       <%= f.email_field :email %>
     </div>
 
-    <div class="field">
+    <div class="field large-8 small-6">
       <%= f.label :password %>
       <% if @validatable %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -32,7 +32,7 @@
       <%= f.password_field :password, autocomplete: "off" %>
     </div>
 
-    <div class="field">
+    <div class="field large-8 small-6">
       <%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation, autocomplete: "off" %>
     </div>
