Replaced 'blank_unknown_data' method helper with 'default_for_blank' method and added 'default_for_associated' to deal with empty associations.

--- a/app/views/exit_site_infections/show.html.haml
+++ b/app/views/exit_site_infections/show.html.haml
@@ -23,7 +23,7 @@
               Outcome:
 
             %p
-              = blank_unknown_data(@exit_site_infection.outcome)
+              = default_for_blank(@exit_site_infection.outcome, "Unknown")
 
           .large-12.columns
             .section-underliner.title-bold
@@ -38,7 +38,7 @@
             .section-underliner.title-bold
               Treatment:
             %p
-              = blank_unknown_data(@exit_site_infection.treatment)
+              = default_for_blank(@exit_site_infection.treatment, "Unknown")
 
           .large-12.columns
             .section-underliner.title-bold
