--- a/app/views/patients/demographics.html.haml
+++ b/app/views/patients/demographics.html.haml
@@ -1,7 +1,7 @@
 .main-content
   .row.g-center
     = render partial: "patients/patient_info_header", locals: { model: @patient }
-  
+
   .row
     = render partial: "patients/mini_renal_profile", locals: { model: @patient }
 
@@ -15,7 +15,7 @@
     = field_set_tag do
       %legend
         Patient Demographics
-  
+
       .large-3.columns
         %dl
           %dt NHS Number:
@@ -25,7 +25,7 @@
           %dd= "#{@patient.local_patient_id}"
 
       .large-3.columns
-        %dl    
+        %dl
           %dt Last Name:
           %dd= "#{@patient.surname}"
 
@@ -38,7 +38,7 @@
           %dd= I18n.t("enums.gender.#{@patient.sex}")
 
           %dt Ethnicity:
-          %dd= @patient.ethnicity.name
+          %dd= default_for_associated(@patient.ethnicity, :name, 'Unspecified')
 
       .large-3.columns
         %dl
@@ -52,7 +52,7 @@
             .alert_text
               Please update patient's causes of death!
             = link_to "Update Cause of Death", death_update_patient_path(@patient), {class: "update-death button tiny mt"}
-            
+
 
       .large-12.columns
         %dl
@@ -85,16 +85,16 @@
     = field_set_tag do
       %legend
         Current Address
-      
+
       = render @patient.current_address if @patient.current_address
-  
+
   .large-4.columns
     = field_set_tag do
       %legend
         Address at Diagnosis
-         
+
       = render @patient.address_at_diagnosis if @patient.address_at_diagnosis
-  
+
 .wide-screen
-  = content_for :secondary_nav do  
+  = content_for :secondary_nav do
     = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
