--- a/app/views/peritonitis_episodes/show.html.haml
+++ b/app/views/peritonitis_episodes/show.html.haml
@@ -13,7 +13,7 @@
   .large-12.columns
     = field_set_tag do
       %legend.title-bold
-        = "Last Updated: #{@peritonitis_episode.updated_at.strftime("%d/%m/%Y, %H:%M")}"
+        = "Last Updated: #{@peritonitis_episode.updated_at}"
 
       .large-6.columns
         .large-12.columns
