Fixed class style typo in peritonitis episode show.

--- a/app/views/peritonitis_episodes/show.html.haml
+++ b/app/views/peritonitis_episodes/show.html.haml
@@ -52,7 +52,7 @@
             .section-underliner.title-bold
               White Cell Count:
 
-            .large-12.columnss
+            .large-12.columns
               %ul
                 %li
                   = "Total: #{@peritonitis_episode.white_cell_total}"
@@ -70,6 +70,7 @@
           .large-12.columns
             .section-underliner.title-bold
               Causes/Symptoms:
+
             .large-12.columns
               %ul.table-data-list
                 %li
