--- a/app/views/patients/death.html.haml
+++ b/app/views/patients/death.html.haml
@@ -37,9 +37,9 @@
           %td{ :data => { :heading => "Sex"}}
             = I18n.t("enums.gender.#{patient.sex}")
           %td{ :data => { :heading => "DoB"}}
-            = patient.dob.strftime("%d/%m/%Y")
+            = patient.dob
           %td{ :data => { :heading => "DoD"}}
-            = patient.death_date.strftime("%d/%m/%Y")
+            = patient.death_date
           %td{ :data => { :heading => "Age"}}
             = patient.age
           %td.g-center{ :data => { :heading => "Causes of Death"}, valign: "top" }
