Fixed missing navigation/renalware_admin partial on main navigation bar.

--- a/app/views/navigation/_main.html.haml
+++ b/app/views/navigation/_main.html.haml
@@ -12,3 +12,5 @@
       = render partial: 'navigation/users_admin'
       = render partial: 'navigation/renal_reg_codes_admin'
       = render partial: 'navigation/patients_admin'
+      = render partial: 'navigation/renalware_admin'
+
