--- a/app/views/patients/_problem_form.html.haml
+++ b/app/views/patients/_problem_form.html.haml
@@ -1,6 +1,6 @@
 - if pb.object.new_record?
 
-  .problem-form{data: { index: @patient.patient_problems.length - 1 }}
+  .problem-form{data: { index: @patient.problems.length - 1 }}
     .a-problem
       .row
         .remove-problem.right.add-x
