Renamed attribute 'dob' to 'birth_date' to be consistent with 'death_date'.

--- a/app/views/patients/_patient_info_header.html.haml
+++ b/app/views/patients/_patient_info_header.html.haml
@@ -1,7 +1,2 @@
 %h4.patient-info
-  = "#{@patient.full_name} - HospNo: #{@patient.local_patient_id} #{@patient.age} yo #{I18n.t("enums.gender.#{@patient.sex}")} DoB: #{@patient.dob.strftime("%d/%m/%Y")} [#{@patient.current_modality.blank? || @patient.current_modality.new_record? ? "No Modal" : @patient.current_modality.modality_code.name}]"
-
-%nav.sub-nav-container
-  %dl.sub-nav{role: "menu"}
-    %dt
-    = render partial: "patients/patient_sub_nav", locals: { model: @patient }
+  = "#{@patient.full_name} - KCH: #{@patient.local_patient_id}, Age: #{@patient.age}, #{I18n.t("enums.gender.#{@patient.sex}")}, DoB: #{@patient.birth_date}, #{@patient.current_modality.blank? || @patient.current_modality.new_record? ? "No Modal" : @patient.current_modality.modality_code.name}"
