--- a/app/views/patients/_demographic_form.html.haml
+++ b/app/views/patients/_demographic_form.html.haml
@@ -35,8 +35,8 @@
               = patient.collection_select(:ethnicity_id, Ethnicity.all, :id, :name, { prompt: "Please select ethnicity" })
 
         .large-6.columns
-          = patient.label :dob, "DoB"
-          = patient.date_select(:dob, {start_year: (120.years.ago).year, end_year: Time.now.year , order: [:day, :month, :year]}, class: "dob")
+          = patient.label :birth_date, "DoB"
+          = patient.date_select(:birth_date, {start_year: (120.years.ago).year, end_year: Time.now.year , order: [:day, :month, :year]}, class: "dob")
 
         .large-12.columns
           = patient.check_box :paediatric_patient_indicator
