--- a/app/views/patients/_patient.html.haml
+++ b/app/views/patients/_patient.html.haml
@@ -8,7 +8,7 @@
   %td{ :data => { :heading => "Sex"}}
     = I18n.t("enums.gender.#{patient.sex}")
   %td{ :data => { :heading => "DoB"}}
-    = patient.dob
+    = patient.birth_date
   %td{ :data => { :heading => "Age"}}
     = patient.age
   %td.g-center{ :data => { :heading => "Admin"}}
