--- a/app/views/patients/death.html.haml
+++ b/app/views/patients/death.html.haml
@@ -37,7 +37,7 @@
           %td{ :data => { :heading => "Sex"}}
             = I18n.t("enums.gender.#{patient.sex}")
           %td{ :data => { :heading => "DoB"}}
-            = patient.dob
+            = patient.birth_date
           %td{ :data => { :heading => "DoD"}}
             = patient.death_date
           %td{ :data => { :heading => "Age"}}
