--- a/app/views/patients/demographics.html.haml
+++ b/app/views/patients/demographics.html.haml
@@ -41,7 +41,7 @@
       .large-3.columns
         %dl
           %dt Date of Birth:
-          %dd= @patient.dob
+          %dd= @patient.birth_date
 
           %dt Date of Death:
           %dd= @patient.death_date.blank? ? "N/A" : @patient.death_date
