--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -35,15 +35,15 @@
 .wide-screen
   .columns.large-12
     %h6
-      = link_to "#{@patient.patient_events.length} Patient Events", patient_patient_events_path(@patient)
+      = link_to "#{@patient.events.length} Patient Events", patient_events_path(@patient)
 
     %ul.no-bullet
-      - @patient.patient_events.each do |event|
+      - @patient.events.each do |event|
         %li
           %dl.accordion{data: {accordion: true} }
             %dd.accordion-navigation
               %a.fi-plus.fi-minus.toggle-info{:id => "patient-event-toggle-info-#{event.id}", href: "#patient-event-notes-#{event.id}"}
-                = "#{event.date_time}, #{event.patient_event_type.name} - #{event.description}"
+                = "#{event.date_time}, #{event.event_type.name} - #{event.description}"
 
               .patient-event.content{:id => "patient-event-notes-#{event.id}"}
                 = event.notes
