--- a/app/views/navigation/_patient_admin.html.haml
+++ b/app/views/navigation/_patient_admin.html.haml
@@ -10,5 +10,5 @@
         %li
           = link_to "Manage Medications", manage_medications_patient_path(@patient)
         %li
-          = link_to "Add Patient Event", new_patient_patient_event_path(@patient)
+          = link_to "Add Patient Event", new_patient_event_path(@patient)
 
