--- a/app/views/navigation/_renalware_admin.html.haml
+++ b/app/views/navigation/_renalware_admin.html.haml
@@ -3,7 +3,7 @@
     = link_to "Admin", patients_path
     %ul.dropdown
       %li
-        = link_to "Manage Patient Event Types", patient_event_types_path
+        = link_to "Manage Patient Event Types", event_types_path
       %li
         = link_to "Manage Drugs", drugs_path
       %li
