--- a/app/views/navigation/_renalware_admin.html.haml
+++ b/app/views/navigation/_renalware_admin.html.haml
@@ -8,3 +8,6 @@
         = link_to "Manage Drugs", drugs_path
       %li
         = link_to "Manage Modalities", modality_codes_path
+      %li
+        = link_to "Add a new bag type", new_bag_type_path
+
