Updated relevant files with rename of 'bag_description' to 'description'.

--- a/app/views/bag_types/_form.html.haml
+++ b/app/views/bag_types/_form.html.haml
@@ -1,8 +1,8 @@
 = bt.label :manufacturer
 = bt.text_field :manufacturer
 
-= bt.label :bag_description
-= bt.text_field :bag_description
+= bt.label :description
+= bt.text_field :description
 
 = bt.label :amount_1_36_glucose, "Volume of 1.36% glucose/liter (ml)"
 = bt.text_field :amount_1_36_glucose
