--- a/app/views/bag_types/index.html.haml
+++ b/app/views/bag_types/index.html.haml
@@ -34,7 +34,7 @@
           %td{ :data => { :heading => "Manufacturer" } }
             = bt.manufacturer
           %td{ :data => { :heading => "Bag description" } }
-            = bt.bag_description
+            = bt.description
           %td{ :data => { :heading => "1.36% glucose/liter (ml)" } }
             = bt.amount_1_36_glucose
           %td{ :data => { :heading => "2.27% glucose/liter (ml)" } }
