Updated rename of 'amount_1_36_glucose' to 'glucose_ml_percent_1_36'.

--- a/app/views/bag_types/_form.html.haml
+++ b/app/views/bag_types/_form.html.haml
@@ -4,8 +4,8 @@
 = bt.label :description
 = bt.text_field :description
 
-= bt.label :amount_1_36_glucose, "Volume of 1.36% glucose/liter (ml)"
-= bt.text_field :amount_1_36_glucose
+= bt.label :glucose_ml_percent_1_36, "Volume of 1.36% glucose/liter (ml)"
+= bt.text_field :glucose_ml_percent_1_36
 
 = bt.label :amount_2_27_glucose, "Volume of 2.27% glucose/liter (ml)"
 = bt.text_field :amount_2_27_glucose
