--- a/app/views/bag_types/index.html.haml
+++ b/app/views/bag_types/index.html.haml
@@ -36,7 +36,7 @@
           %td{ :data => { :heading => "Bag description" } }
             = bt.description
           %td{ :data => { :heading => "1.36% glucose/liter (ml)" } }
-            = bt.amount_1_36_glucose
+            = bt.glucose_ml_percent_1_36
           %td{ :data => { :heading => "2.27% glucose/liter (ml)" } }
             = bt.amount_2_27_glucose
           %td{ :data => { :heading => "3.86% glucose/liter (ml)" } }
