Updated rename of 'amount_2_27_glucose' to 'glucose_ml_percent_2_27'.

--- a/app/views/bag_types/index.html.haml
+++ b/app/views/bag_types/index.html.haml
@@ -38,7 +38,7 @@
           %td{ :data => { :heading => "1.36% glucose/liter (ml)" } }
             = bt.glucose_ml_percent_1_36
           %td{ :data => { :heading => "2.27% glucose/liter (ml)" } }
-            = bt.amount_2_27_glucose
+            = bt.glucose_ml_percent_2_27
           %td{ :data => { :heading => "3.86% glucose/liter (ml)" } }
             = bt.amount_3_86_glucose
           %td{ :data => { :heading => "amino acid soln/liter (ml)" } }
