--- a/app/views/bag_types/_form.html.haml
+++ b/app/views/bag_types/_form.html.haml
@@ -7,8 +7,8 @@
 = bt.label :glucose_ml_percent_1_36, "Volume of 1.36% glucose/liter (ml)"
 = bt.text_field :glucose_ml_percent_1_36
 
-= bt.label :amount_2_27_glucose, "Volume of 2.27% glucose/liter (ml)"
-= bt.text_field :amount_2_27_glucose
+= bt.label :glucose_ml_percent_2_27, "Volume of 2.27% glucose/liter (ml)"
+= bt.text_field :glucose_ml_percent_2_27
 
 = bt.label :amount_3_86_glucose, "Volume of 3.86% glucose/liter (ml)"
 = bt.text_field :amount_3_86_glucose
