Updated rename of 'amount_3_86_glucose' to 'glucose_ml_percent_3_86'.

--- a/app/views/bag_types/_form.html.haml
+++ b/app/views/bag_types/_form.html.haml
@@ -10,8 +10,8 @@
 = bt.label :glucose_ml_percent_2_27, "Volume of 2.27% glucose/liter (ml)"
 = bt.text_field :glucose_ml_percent_2_27
 
-= bt.label :amount_3_86_glucose, "Volume of 3.86% glucose/liter (ml)"
-= bt.text_field :amount_3_86_glucose
+= bt.label :glucose_ml_percent_3_86, "Volume of 3.86% glucose/liter (ml)"
+= bt.text_field :glucose_ml_percent_3_86
 
 = bt.label :amount_amino_acid, "Volume of amino acid soln/liter (ml)"
 = bt.text_field :amount_amino_acid
