--- a/app/views/bag_types/index.html.haml
+++ b/app/views/bag_types/index.html.haml
@@ -40,7 +40,7 @@
           %td{ :data => { :heading => "2.27% glucose/liter (ml)" } }
             = bt.glucose_ml_percent_2_27
           %td{ :data => { :heading => "3.86% glucose/liter (ml)" } }
-            = bt.amount_3_86_glucose
+            = bt.glucose_ml_percent_3_86
           %td{ :data => { :heading => "amino acid soln/liter (ml)" } }
             = bt.amount_amino_acid
           %td{ :data => { :heading => "icodextrin soln (ml)" } }
